Issue #13774: json: Fix a SystemError when a bogus encoding is passed to json.loads().